[fix] primary key from uuid to serial number
